-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0 Beta
-
None
-
-
81998b4e8e440076bd22a9164f0a93481c0e597a
Using the android bearer plugin introduce a regression compared to 5.3.2.
When there is for example a data connection using a sim and wifi is on but not connected, the connection is not properly seen, data connection is not used. It seems requests sent to a server are not properly made as the server does not send any reply to them.
Changing the libqandroidbearer plugin with the libqgenericbearer plugin fixes the problem.
Can be reproduced using the devdays app:
https://codereview.qt-project.org/#/admin/projects/qt-labs/talk-schedule
- is required for
-
QTBUG-41613 Issues to be fixed before 5.4.0 RC
-
- Closed
-
| For Gerrit Dashboard: QTBUG-41832 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 96775,3 | Android: Fix android bearer implementation. | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |